--- a/flipkart-typescrit-project/package.json
+++ b/flipkart-typescrit-project/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^5.4.3",
+    "@tanstack/react-query-devtools": "^5.8.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,8 +13,9 @@
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
-    "mobx": "^6.10.2",
+    "mobx": "^6.11.0",
     "mobx-react": "^9.0.2",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
