--- a/flipkart-typescrit-project/package.json
+++ b/flipkart-typescrit-project/package.json
@@ -20,9 +20,9 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
