--- a/flipkart-typescrit-project/package.json
+++ b/flipkart-typescrit-project/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "mobx": "^6.11.0",
+    "mobx-persist-store": "^1.1.3",
     "mobx-react": "^9.0.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
